// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SecurityCard render correctly as admin: admin 1`] = `
<DocumentFragment>
  <a
    class="chakra-stack css-12rha61"
    href="/security/0.0.123456"
  >
    <div
      class="chakra-stack css-h3g6v6"
    >
      <div
        class="chakra-stack css-198f9j2"
      >
        <p
          class="css-1bcbshz"
        />
        <svg
          class="chakra-icon css-twx6rw"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 256 256"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M234.5,114.38l-45.1,39.36,13.51,58.6a16,16,0,0,1-23.84,17.34l-51.11-31-51,31a16,16,0,0,1-23.84-17.34L66.61,153.8,21.5,114.38a16,16,0,0,1,9.11-28.06l59.46-5.15,23.21-55.36a15.95,15.95,0,0,1,29.44,0h0L166,81.17l59.44,5.15a16,16,0,0,1,9.11,28.06Z"
          />
        </svg>
      </div>
      <p
        class="css-kwpule"
      >
        TEST testing
      </p>
    </div>
  </a>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`SecurityCard render correctly as holder: holder 1`] = `
<DocumentFragment>
  <a
    class="chakra-stack css-zxhdiq"
    href="/security/0.0.123456"
  >
    <div
      class="chakra-stack css-h3g6v6"
    >
      <div
        class="chakra-stack css-198f9j2"
      >
        <p
          class="css-1bcbshz"
        />
        <svg
          class="chakra-icon css-twx6rw"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 256 256"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M234.5,114.38l-45.1,39.36,13.51,58.6a16,16,0,0,1-23.84,17.34l-51.11-31-51,31a16,16,0,0,1-23.84-17.34L66.61,153.8,21.5,114.38a16,16,0,0,1,9.11-28.06l59.46-5.15,23.21-55.36a15.95,15.95,0,0,1,29.44,0h0L166,81.17l59.44,5.15a16,16,0,0,1,9.11,28.06Z"
          />
        </svg>
      </div>
      <p
        class="css-kwpule"
      >
        TEST testing
      </p>
    </div>
  </a>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;
